fixed alignment and buttons

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poller+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
 
 #root {
     overflow: hidden;
@@ -10,11 +11,12 @@
 
 ul{
     list-style: none;
+    display: block;
 }
 
 h1 {
     font-size: 45px;
-    font-family: "Poller One";
+    font-family: "Inconsolata";
     color: white;
 }
 
@@ -27,7 +29,8 @@ h1 {
 }
 
 h3, h2{
-    font-size: 50px;
+    font-family: "Inconsolata";
+    font-size: 30px;
     color: white;
 }
 
@@ -41,7 +44,12 @@ p{
 }
 
 body {
-    background-color:#104166;
+    background-color:#0299dc;
+}
+
+i {
+    font-size: 30px;
+    color: white;
 }
 
 .sectionheader{
@@ -56,7 +64,7 @@ body {
 }
 
 .projectimg{
-    max-width: 300px;
+    max-width: 250px;
     border: 1px solid white;
 }
 
@@ -71,6 +79,8 @@ body {
 button {
     background-color: #104166;
     color: white;
+    border-radius: 10px;
+    border: 2px solid white;
 }
 
 button:hover{
